terraform/codebuild/security/PJTC-DEV-igw.tf
resource "aws_internet_gateway" "igw-04fb219f9875a3524" {
    vpc_id = "vpc-0d4646df276b9d89e"

    tags {
    }
}
